# aw-core

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  Makefile  Pipfile  README.md  appveyor.yml  berkeleydb-example.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build.yml  codeql.yml  lint.yml
actwa/core/: models.py
aw/core/: models.py
aw/datastore/: storage_strategies.py
aw_analysis/: __init__.py  query2.py  query2_error.py  query2_functions.py
aw_cli/: __main__.py  log.py
aw_core/: __about__.py  __init__.py  cached_views.py  config.py  decorators.py  dirs.py  json.py  log.py  manager.py  models.py  query.py  schema.py  timeperiod.py  transform.py  transforms.py  util.py  views.py
aw_core/schemas/: bucket.json  export.json  settings.json
aw_datastore/: __init__.py  benchmark.py  datastore.py  migration.py  storage_strategies.py
aw_datastore/storage_methods/: sqlite.py
aw_datastore/storages/: __init__.py  abstract.py  berkeleydb.py  memory.py  mongodb.py  peewee.py  sqlite.py  tinydb.py
aw_query/: __init__.py  exceptions.py  functions.py  query2.py
aw_transform/: __init__.py  cached_queries.py  cached_views.py  chunk_events_by_key.py  classify.py  filter_keyvals.py  filter_period_intersect.py  flood.py  heartbeats.py  limit_events.py  merge_events_by_keys.py  period_union.py  query.py  query2.py  query2_functions.py  simplify.py  sort_by.py  split_url_events.py  transforms.py  union_no_overlap.py
schemas/: event.json  example.json  test_schemas.py
stubs/: appdirs.pyi  iso8601.py  iso8601.pyi  peewee.pyi  pymongo.py  tinydb_serialization.pyi
stubs/pythonjsonlogger/: __init__.pyi  jsonlogger.pyi
stubs/tinydb/: __init__.py  storages.pyi  tinydb.py
tests/: __init__.py  context.py  test_config.py  test_datastore.py  test_event.py  test_flood.py  test_heartbeat.py  test_query.py  test_query2.py  test_schemas.py  test_timeperiod.py  test_transform.py  test_transforms.py  test_transforms_hypot.py  test_view.py  utils.py
