[tool.poetry]
name = "aw-core"
version = "0.5.9"
description = "Core library for ActivityWatch"
authors = ["Erik Bjäreholt <erik@bjareho.lt>", "Johan Bjäreholt <johan@bjareho.lt>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://activitywatch.net/"
repository = "https://github.com/ActivityWatch/aw-core/"
documentation = "https://docs.activitywatch.net/"
packages = [
    { include = "aw_core" },
    { include = "aw_datastore" },
    { include = "aw_transform" },
    { include = "aw_query" },
]

[tool.poetry.dependencies]
python = "^3.7"
jsonschema = "^4.3"
peewee = "3.*"
appdirs = "^1.4.4"
iso8601 = "^1.0.2"
rfc3339-validator = "^0.1.4"  # needed for the date-type format in jsonschema
python-json-logger = "*"
TakeTheTime = "^0.3.1"
pymongo = {version = "^3.10.0", optional = true}
strict-rfc3339 = "^0.7"
tomlkit = "*"
deprecation = "*"
timeslot = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "*"
mypy = "*"
pylint = "^2.4.4"
black = "^22.1.0"

[tool.poetry.extras]
mongo = ["pymongo"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
